--- a/login/signup/index.css
+++ b/login/signup/index.css
@@ -37,7 +37,7 @@ body, html{
 	font-weight:bolder;
 	text-align:center;
 }
-.form{
+#userinput, #error{
 display:grid;
 justify-items:center;
 align-items:center;
@@ -68,7 +68,7 @@ border-radius:3px;
 cursor:pointer;
 
 }
-a{
+a, #errormessage{
 	color:var(--accent-3);
 	font-size:2em;
 	margin:3px;
